--- a/package.json
+++ b/package.json
@@ -45,40 +45,40 @@
         ]
     },
     "build": {
-      "appId": "com.electron.desktop",
-      "productName": "cClock",
-      "asar": true,
-      "copyright": "Copyright © 2022-2023 Chenyx",
-      "directories": {
-          "output": "release/${version}"
-      },
-      "files": [
-          "dist"
-      ],
-      "mac": {
-          "artifactName": "${productName}_${version}.${ext}",
-          "target": [
-              "dmg"
-          ]
-      },
-      "win": {
-          "target": [
-              {
-                  "target": "nsis",
-                  "arch": [
-                      "x64"
-                  ]
-              }
-          ],
-          "artifactName": "${productName}_${version}.${ext}"
-      },
-      "nsis": {
-          "oneClick": false,
-          "perMachine": false,
-          "allowToChangeInstallationDirectory": true,
-          "deleteAppDataOnUninstall": false
-      }
-  },
+        "appId": "com.electron.desktop",
+        "productName": "cClock",
+        "asar": true,
+        "copyright": "Copyright © 2022-2023 Chenyx",
+        "directories": {
+            "output": "release/${version}"
+        },
+        "files": [
+            "dist"
+        ],
+        "mac": {
+            "artifactName": "${productName}_${version}.${ext}",
+            "target": [
+                "dmg"
+            ]
+        },
+        "win": {
+            "target": [
+                {
+                    "target": "nsis",
+                    "arch": [
+                        "x64"
+                    ]
+                }
+            ],
+            "artifactName": "${productName}_${version}.${ext}"
+        },
+        "nsis": {
+            "oneClick": false,
+            "perMachine": false,
+            "allowToChangeInstallationDirectory": true,
+            "deleteAppDataOnUninstall": false
+        }
+    },
     "dependencies": {
         "@electron-toolkit/preload": "^1.0.3",
         "@electron-toolkit/utils": "^1.0.2",
@@ -93,7 +93,7 @@
         "@vue/eslint-config-typescript": "^11.0.2",
         "@commitlint/cli": "^17.6.3",
         "@commitlint/config-conventional": "^17.6.3",
-        "@types/node": "^20.1.2",
+        "@types/node": "16.18.21",
         "@typescript-eslint/eslint-plugin": "^5.59.5",
         "@typescript-eslint/parser": "^5.59.5",
         "commitizen": "4.3.0",
@@ -101,7 +101,6 @@
         "eslint": "^8.40.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^4.2.1",
-        "eslint-plugin-vue": "^9.12.0",
         "husky": "^8.0.3",
         "lint-staged": "^13.2.2",
         "prettier": "^2.8.8",
@@ -115,6 +114,7 @@
         "electron": "^22.3.4",
         "electron-builder": "^23.6.0",
         "electron-vite": "^1.0.21",
+        "eslint-plugin-vue": "^9.10.0",
         "less": "^4.1.3",
         "typescript": "^4.9.5",
         "vite": "^4.2.1",
