--- a/package.json
+++ b/package.json
@@ -45,16 +45,13 @@
         ]
     },
     "build": {
-        "appId": "com.electron.desktop",
+        "appId": "com.chenyx.desktop",
         "productName": "cClock",
         "asar": true,
         "copyright": "Copyright © 2022-2023 Chenyx",
         "directories": {
             "output": "release/${version}"
         },
-        "files": [
-            "dist"
-        ],
         "mac": {
             "artifactName": "${productName}_${version}.${ext}",
             "target": [
@@ -82,28 +79,42 @@
     "dependencies": {
         "@electron-toolkit/preload": "^1.0.3",
         "@electron-toolkit/utils": "^1.0.2",
-        "electron-updater": "^5.3.0"
+        "@electron/remote": "^2.0.9",
+        "@element-plus/icons-vue": "^2.1.0",
+        "electron-updater": "^5.3.0",
+        "element-plus": "^2.3.4",
+        "pinia": "^2.0.36",
+        "pinia-plugin-persistedstate": "^3.1.0",
+        "unplugin-icons": "^0.16.1",
+        "unplugin-vue-components": "^0.24.1",
+        "vue-router": "^4.2.0"
     },
     "devDependencies": {
+        "@commitlint/cli": "^17.6.3",
+        "@commitlint/config-conventional": "^17.6.3",
         "@electron-toolkit/tsconfig": "^1.0.1",
         "@electron/notarize": "^1.2.3",
         "@rushstack/eslint-patch": "^1.2.0",
-        "@vitejs/plugin-vue": "^4.1.0",
-        "@vue/eslint-config-prettier": "^7.1.0",
-        "@vue/eslint-config-typescript": "^11.0.2",
-        "@commitlint/cli": "^17.6.3",
-        "@commitlint/config-conventional": "^17.6.3",
         "@types/node": "16.18.21",
         "@typescript-eslint/eslint-plugin": "^5.59.5",
         "@typescript-eslint/parser": "^5.59.5",
+        "@vitejs/plugin-vue": "^4.1.0",
+        "@vue/eslint-config-prettier": "^7.1.0",
+        "@vue/eslint-config-typescript": "^11.0.2",
         "commitizen": "4.3.0",
         "cz-git": "^1.6.1",
+        "electron": "^22.3.4",
+        "electron-builder": "^23.6.0",
+        "electron-vite": "^1.0.21",
         "eslint": "^8.40.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-vue": "^9.10.0",
         "husky": "^8.0.3",
         "lint-staged": "^13.2.2",
         "prettier": "^2.8.8",
+        "sass": "^1.62.1",
+        "scss": "^0.2.4",
         "stylelint": "^15.6.1",
         "stylelint-config-html": "^1.1.0",
         "stylelint-config-recess-order": "^4.0.0",
@@ -111,11 +122,6 @@
         "stylelint-config-recommended-vue": "^1.4.0",
         "stylelint-config-standard": "^33.0.0",
         "stylelint-config-standard-scss": "^9.0.0",
-        "electron": "^22.3.4",
-        "electron-builder": "^23.6.0",
-        "electron-vite": "^1.0.21",
-        "eslint-plugin-vue": "^9.10.0",
-        "less": "^4.1.3",
         "typescript": "^4.9.5",
         "vite": "^4.2.1",
         "vue": "^3.2.47",
